[metadata]
name = pynfs

[options.entry_points]
console_scripts =
    nfs41server = pynfs.nfs41.nfs4server:start_server
    nfs41testserver = pynfs.nfs41.testserver:main
    nfs41testclient = pynfs.nfs41.testclient:main
    nfs41proxy = pynfs.nfs41.nfs4proxy:main
    showresults = pynfs.showresult:main
    nfs40server = pynfs.nfs40.nfs4server:start_server

[global]
commands = setup.CustomBuildPy
